--- a/responsive-design/styles.css
+++ b/responsive-design/styles.css
@@ -48,6 +48,23 @@
     background-color: #C8C6FA;
 }
 
+/* Responsive Images styles */
+.illustration img {
+    width: 100%;
+    display: block;
+}
+
+.header {
+    height: auto;
+    justify-content: inherit;
+    align-items: inherit;
+}
+
+.photo img {
+    width: 100%;
+    display: block;
+}
+
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
     body {
@@ -89,11 +106,11 @@
         width: 33.3%
     }
 
-    .content {
+    .sign-up {
         order: 1;
     }
 
-    .sign-up {
+    .content {
         order: 2;
     }
 }
