--- a/web-typography/typo.css
+++ b/web-typography/typo.css
@@ -194,10 +194,11 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
 }
+
+/* The following styles are set by default so they are unnecessary */
 em {
   font-style: italic;
 }
-
 strong {
   font-weight: bold;
 }
